# stableagents

./: .env.local  .gitignore  AGENTMAP.MD  AI_COMPUTER_CONTROL.md  AI_FUNCTIONALITY_README.md  API_JAVASCRIPT_ARCHITECTURE.md  CHANGES.txt  CITATION.cff  CONTRIBUTING.MD  Citation.cff  DOCS.md  ENHANCED_GEMINI_INTEGRATION.md  EXISTING_AGENTS.md  GEMINI_CONNECTION_SUMMARY.md  Gemfile  INSTALLATION.md  INTRO.MD  LICENSE  MANIFEST.in  MODEL_INTEGRATION.md  MULTI_PROCESS_ARCHITECTURE.md  NATURAL_LANGUAGE_DESKTOP.md  PUBLISHING.md  README.md  README_NATURAL_LANGUAGE_DESKTOP.md  ROADMAP.md  SELFHOSTING.MD  STABLE_DESKTOP.md  STABLE_DESKTOP_SUMMARY.md  UNSTABLE_AGENTS.md  build_publish.sh  demo_natural_language_desktop.py  example.txt  example_multi_process_usage.py  gemini_api.sh  gemini_desktop_example.py  gemini_example.py  gemini_to_desktop_example.py  index.html  install.sh  (+29 more)
actions/: README.md  main.py
agents/: __init__.py  action.py  memory.py  server.py
agents/core/: __init__.py
agents/interface/: interface.py
agents/main/: main_server.py
agents/memory/: chroma.py
agents/walkietalkie/: __init__.py  hallucination_predictor.py  main.py
desktopgpt/: .gitignore  browser.py  main.py  openai-test.py
desktopgpt/apps/: browser.py  notes.py
desktopgpt/prompts/: volume.txt
docs/: index.html
examples/: ai_computer_control_demo.py  ai_functionality_demo.py  ai_integration_example.py  api_client_example.py  complete_model_integration.py  computer_control_example.py  enhanced_gemini_desktop_demo.py  guided_setup_demo.py  improved_flow_demo.py  interactive_computer_control_demo.py  natural_language_desktop_demo.py  secure_api_setup_demo.py  simple_integration_test.py  stable_desktop_demo.py
frontend/: index.html  server.py
frontend/js/: app.js
install/: mac-install.sh
myenv/: pyvenv.cfg
notifications/: notifications.py
public/: CITATION.cff  index.html
sa-app/api/: README.md  main.py
stable_desktop_projects/Browser/: README.md  main.py  project.json  setup.py
stable_desktop_projects/Calculator/: README.md  main.py  project.json  requirements.txt  setup.py
stable_desktop_projects/Calculator App/: README.md  project.json  setup.py
stable_desktop_projects/Error: 400 API key expired. Please renew the API k/: README.md  project.json  requirements.txt  setup.py
stable_desktop_projects/I_Want_To/: README.md  project.json  setup.py
stable_desktop_projects/Notes_app/: README.md  main.py  project.json  setup.py
stable_desktop_projects/Scientific_Calculator/: README.md  main.py  project.json  requirements.txt  setup.py
stable_desktop_projects/SimpleCalculator/: README.md  main.py  project.json  requirements.txt  setup.py
stable_desktop_projects/calculator/: README.md  main.py  project.json  setup.py
stable_desktop_projects/email/: README.md  main.py  project.json  requirements.txt  setup.py
stable_desktop_projects/notes/: README.md  main.py  project.json  setup.py
stable_desktop_projects/web_browser/: README.md  main.py  project.json  setup.py
stableagents/: __init__.py  ai_functionality.py  ai_providers.py  api.py  api_key_manager.py  api_server.py  cli.py  cli_entry.py  cli_key_manager.py  cli_natural_desktop.py  computer.py  config_manager.py  desktop.py  main.py  natural_language_desktop.py  prompts_showcase.py  run  run_cli.py  simple_cli.py  stableagents  stripe_payment.py  unified_cli.py
stableweb/: index.py
test_env/: pyvenv.cfg
tests/: test_ai_control.py  test_api_key_env.py  test_enhanced_gemini_integration.py  test_exit_fix.py  test_exit_functionality.py  test_framework_fix.py  test_gemini_fix.py  test_generation_config_fix.py  test_google_genai_comparison.py  test_natural_language_desktop.py  test_new_flow.py  test_payment_link_integration.py  test_stable_desktop.py  test_stableagents.py  test_stripe_integration.py  test_stripe_payment_link.py
(+44 files in other folders)
