[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stableagents-ai"
version = "0.2.1"
description = "A framework for self healing agents that can run locally and minimize hallucinations"
authors = ["Jordan Plows <jordan@plows.ai>"]
readme = "README.md"
license = "MIT"
packages = [{include = "stableagents"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
openai = "^1.0.0"
anthropic = "^0.5.0"
psutil = "^5.9.0"
pyppeteer = "^1.0.2"

[tool.poetry.extras]
local = ["llama-cpp-python"]
all = ["llama-cpp-python"]

[tool.poetry.scripts]
stableagents = "stableagents.run_cli:main"
stableagents-ai = "stableagents.run_cli:main"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
