[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stableagents-ai"
version = "0.2.2"
description = "The standard for capable and reliable agents in production"
authors = ["Jordan Plows <jordan@plows.ai>"]
readme = "README.md"
license = "MIT"
packages = [{include = "stableagents"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
openai = "^1.0.0"
anthropic = "^0.5.0"
psutil = "^5.9.0"
pyppeteer = "^1.0.2"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
cryptography = "^3.4.0"

[tool.poetry.extras]
local = ["llama-cpp-python"]
all = ["llama-cpp-python"]

[tool.poetry.scripts]
stableagents = "stableagents.run_cli:main"
stableagents-api = "stableagents.api:app"
stableagents-keys = "stableagents.cli_key_manager:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
